pingvin-share/pingvin-share-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingvin-share
  namespace: pingvin-share
spec:
  selector:
    app: pingvin-share
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
