pingvin-share/pingvin-share-ingress.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pingvin-share
  namespace: pingvin-share
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`share.albinmedoc.se`)
      kind: Rule
      services:
        - name: pingvin-share
          port: 3000
